# reasoning_model_from_scratch

./: .gitignore  01_chain_of_thought_sft.ipynb  02_grpo_from_scratch.ipynb  03_training_a_reasoning_model.ipynb  04_emergent_reasoning_and_distillation.ipynb  TRAINING_TUTORIAL.md  pyproject.toml
