[project]
name = "reasoning-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "gdown>=5.2.1",
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
